source/carehub/main/default/objects/Product2/fields/AddOns__c.field-meta.xml
<CustomField>
    <fullName>AddOns__c</fullName>
    <description>The extra options provided by this subscription</description>
    <label>Add Ons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audio</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>