source/carehub/main/default/objects/Product2/fields/IsSubscription__c.field-meta.xml
<CustomField>
    <fullName>IsSubscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Subscription</label>
    <type>Checkbox</type>
</CustomField>