source/carehub/main/default/objects/Product2/fields/Minutes__c.field-meta.xml
<CustomField>
    <fullName>Minutes__c</fullName>
    <inlineHelpText>Minutes per Month</inlineHelpText>
    <label>Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>