source/carehub/main/default/objects/Product2/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AppSupplier</fullName>
                <label>App Supplier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>