source/carehub/main/default/objects/Product2/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>IsSubscription__c</columns>
    <columns>AddOns__c</columns>
    <columns>PricePerWeek__c</columns>
    <columns>Minutes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>